2005-08-02  Matt Johnston  <matt@ucc.asn.au>

	* botan/gzip.cpp: forgot to commit some semicolons

2005-08-02  Matt Johnston  <matt@ucc.asn.au>

	* botan/gzip.{cpp,h}: rearranged the code to be clearer.

2005-08-01  Nathaniel Smith  <njs@pobox.com>

	* netsync.cc (get_branches): Remove warning when there are no
	branches.

2005-07-29  Nathaniel Smith  <njs@pobox.com>

	* globish.cc (matcher::operator()): Log what's happening.
	(checked_globish_to_regex_test): Fix previously added test.

2005-07-29  Nathaniel Smith  <njs@pobox.com>

	* globish.cc (checked_globish_to_regex_test): Add another test for
	quoted characters.

2005-07-28  Nathaniel Smith  <njs@pobox.com>

	* update.cc (calculate_update_set): Only include current rev in
	update set if it is an acceptable candidate.
	* commands.cc (update): Clarify error message in this case.
	* tests/t_update_branch.at: Update accordingly.

2005-07-28  Matthew Gregan  <kinetik@orcon.net.nz>

	* monotone.spec: Require boost >= 1.32.

2005-07-27  Matthew Gregan  <kinetik@orcon.net.nz>

	* tests/t_merge_add_del.at: 'drop' does not take a branch (test
	now fails in expected place).
	* tests/t_merge_add_rename_add.at: New test.
	* testsuite.at: Add it.

2005-07-27  Nathaniel Smith  <njs@pobox.com>

	* tests/t_update_branch.at: New test.
	* testsuite.at: Add it.
	(REVERT_TO): Do not preserve MT/options file (can setup invalid
	branch).
	* app_state.cc (make_branch_sticky): Call write_options when
	already have a working copy.
	* commands.cc (update): Call make_branch_sticky at appropriate
	time.

2005-07-27  Nathaniel Smith  <njs@pobox.com>
	
	* commands.cc: ALIAS(mv, rename).  ALIAS(rm, drop).

2005-07-26  Nathaniel Smith  <njs@pobox.com>

	* change_set.cc (dump): Add state_renumbering dumper.
	(merge_disjoint_analyses): Add MM().

2005-07-26  Nathaniel Smith  <njs@pobox.com>

	* change_set.cc (dump): Add path_analysis dumper.
	(merge_change_sets): Add more MM()s.

2005-07-26  Nathaniel Smith  <njs@pobox.com>
